documentation/web/versioned_docs/version-0.0.21/user/cli/klio_wal-player_play.md
---
title: klio wal-player play
---

## klio wal-player play

Send to Klio a directory of WAL files

```
klio wal-player play [directory] [flags]
```

### Options

```
      --block-size int   Block size in KiB. Max 8192 (8 MiB). Defaults to 2048. (default 2048)
  -h, --help             help for play
  -j, --jobs int         Number of parallel jobs to use when sending WALs (default 1)
```

### Options inherited from parent commands

```
      --config string                     config file (default is $HOME/.klio.yaml)
      --debug                             enable debug logging
      --log-destination string            where the log stream will be written
      --log-field-level string            JSON log field to report severity in (default: level)
      --log-field-timestamp string        JSON log field to report timestamp in (default: ts)
      --log-level string                  the desired log level, one of error, info, debug and trace (default "info")
      --log-truncate-destination          truncate the log destination on open instead of appending to it (ignored for FIFOs)
      --pprof-server string               enable the PPROF server using the specified address
      --zap-devel                         Development Mode defaults(encoder=consoleEncoder,logLevel=Debug,stackTraceLevel=Warn). Production Mode defaults(encoder=jsonEncoder,logLevel=Info,stackTraceLevel=Error)
      --zap-encoder encoder               Zap log encoding (one of 'json' or 'console')
      --zap-log-level level               Zap Level to configure the verbosity of logging. Can be one of 'debug', 'info', 'error', 'panic' or any integer value > 0 which corresponds to custom debug levels of increasing verbosity
      --zap-stacktrace-level level        Zap Level at and above which stacktraces are captured (one of 'info', 'error', 'panic').
      --zap-time-encoding time-encoding   Zap time encoding (one of 'epoch', 'millis', 'nano', 'iso8601', 'rfc3339' or 'rfc3339nano'). Defaults to 'epoch'.
```

### SEE ALSO

* [klio wal-player](klio_wal-player.md)	 - WAL Player Commands

